# light-engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  readme
examples/: CMakeLists.txt  README.md  gui_common.hpp  simple_scene.cpp
examples/cpp/: CMakeLists.txt  gui_common.hpp  simple_scene.cpp
examples/cpp/builtin_objects/: CMakeLists.txt  builtin_objects.cpp
examples/cpp/custom_object/: CMakeLists.txt  custom_object.cpp
examples/cpp/model/: CMakeLists.txt  model.cpp
examples/cpp/multiple_frames/: CMakeLists.txt  multiple_frames.cpp
examples/cpp/simple_scene/: CMakeLists.txt  simple_scene.cpp
examples/cpp/texture/: CMakeLists.txt  texture.cpp
examples/python/builtin_objects/: builtin_objects.py
examples/python/custom_object/: custom_object.py
examples/python/simple_scene/: simple_scene.py
include/: engine.h  light_engine.hpp
include/camera/: camera.hpp
include/frame/: frame.hpp
include/frame/scene/: scene.hpp
include/frame/scene/camera/: camera.hpp
include/frame/scene/object/: builtin_objects.hpp  object.hpp
include/frame/scene/object/buffer/: buffer.hpp
include/frame/scene/object/material/: material.hpp
include/frame/scene/object/material/shader/: shader.hpp
include/frame/scene/object/shader/: shader.hpp
include/frame/scene/object/texture/: texture.hpp
include/scene/: scene.hpp
include/scene/object/: buildin_objects.hpp  object.hpp
include/scene/object/shader/: shader.hpp
include/utils/: image.hpp  user_camera.hpp
python/: CMakeLists.txt  __init__.py  py_interface.cpp  setup.py
src/: CMakeLists.txt  base.h  engine.cpp  engine.h  light_engine.cpp  requirements.txt
src/debugging/console/: console.cpp  console.h
src/environment/: environment.cpp  environment.h  shaders.h
src/frame/: frame.cpp
src/frame/scene/: scene.cpp
src/frame/scene/camera/: camera.cpp
src/frame/scene/object/: builtin_objects.cpp  object.cpp
src/frame/scene/object/buffer/: buffer.cpp
src/frame/scene/object/builtin_objects/: box.cpp  box_textured.cpp  box_wireframe.cpp  line.cpp  model.cpp  obj_loader.hpp  point.cpp  point_cloud.cpp  quad.cpp  sphere.cpp  triangle.cpp
src/frame/scene/object/material/: material.cpp
src/frame/scene/object/material/shader/: shader.cpp  uniform_variables.cpp
src/frame/scene/object/material/texture/: texture.cpp
src/frame/scene/object/shader/: shader.cpp  uniform_variables.cpp
src/frame/scene/object/texture/: texture.cpp
src/scene/: scene.cpp  scene.h
src/scene/object_manager/: object_manager.cpp  object_manager.h
src/scene/object_manager/objects/: object.cpp  object.h
src/scene/object_manager/objects/algorithms/lsvco/: acmr.h  how_to_use  license.txt  ls_vcache_opt.cpp  ls_vcache_opt.h
src/scene/object_manager/objects/attribs/buffers/: buffers.cpp  buffers.h
src/scene/object_manager/objects/attribs/materials/: materials.cpp  materials.h
src/scene/object_manager/objects/attribs/textures/: textures.cpp  textures.h
src/scene/render/: render.cpp  render.h
src/utils/: image.cpp  user_camera.cpp
tools/: build_examples.bat  build_examples.sh  build_lib.bat  build_lib.sh  build_python.bat  build_python.sh  install_deps_lib.bat
